tests/res/resolution/duplicate_fn_type.say
// A function and a type sharing a name collide (value/value, neither a trait).
fn foo() { return 1; }
type foo { init() {} } // error: 'foo' already declared in this scope
